--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/media-query.css">
     <title>Login</title>
 </head>
 <body>
    <main>
     <section id="login">
           <div id="imagem">
-FOTO
+
           </div>
           <div id="formulario">
-            <h1>seja bem-vindo(a) novamente, Faça login para acessar a sua conta.</h1>
+            <h1>Login</h1>
+            <p>seja bem-vindo(a) novamente, Faça login para acessar a sua conta.</p>
             <form action="login.php" method="post">
-                
+
             </form>
           </div>
     </section>
