--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/media-query.css">
+    
     <title>Login</title>
 </head>
 <body>
@@ -16,8 +18,21 @@
           <div id="formulario">
             <h1>Login</h1>
             <p>seja bem-vindo(a) novamente, Faça login para acessar a sua conta.</p>
-            <form action="login.php" method="post">
-
+            <form action="login.php" method="post" autocomplete="on">
+<div class="campo">
+  <i class="material-icons">person</i> 
+ <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
+<label for="ilogin">Login</label>
+</div>
+<div class="campo">
+  <i class="material-icons">vpn_key</i> 
+<input type="password" name="senha" id="isen" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+<label for="isen">Senha</label>
+</div>
+<input type="submit" value="Entrar">
+<a href="esqueci.html">
+  Esqueci a senha <i class="material-icons">mail</i>
+</a>
             </form>
           </div>
     </section>
